# gpt-fast-rs

./: Cargo.toml  README.md
src/: config.rs  generate.rs  main.rs  model.rs  utils.rs
