[package]
name = "gpt-fast-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
clap = { version = "4", features = ["derive"] }
serde = "1.0.197"
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
hf-hub = "0.3.2"
tokenizers = "0.15.2"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-flash-attn = { version = "0.4.1", optional = true }
intel-mkl-src = {version="0.8.1", optional = true}
cudarc = {version="0.10.0", optional = true}
candle-onnx = {version="0.4.1", optional = true}
rand = "0.8.5"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl"]
onnx = ["candle-onnx"]
metal = ["candle-core/metal", "candle-nn/metal"]
